# qt6-static-qml

./: CMakeLists.txt  README.md
src/: AppWindow.qml  main.cpp  qtquickcontrols2.conf
